--- a/archive.html
+++ b/archive.html
@@ -311,6 +311,141 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+
+<center><img src="https://i.imgur.com/B3llkOg.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>december . 20 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiiii fluffies <img src="https://i.imgur.com/NJAC8XR.gif"/><br>
+do you have the xmas spirit <img src="https://i.imgur.com/WpkdfFD.gif"/>?<br>
+i'm willing to bring this comfort and warmth to you through this post ♡<br>
+as you know, where i live is summer right now, which is very anticlimatic ; ;<br>
+i always have difficulties getting into the xmas mood, but i love the xmas SO much !!!!<br>
+i always start to live it as soon as halloween is over ( i really love halloween too, by the way )<br>
+one of my biggest dreams is to have a white xmas.<br>
+i really hope for the day when i will have my first white xmas, and maybe, all the next ones too !<br>
+the snow is something magical that i really need to see, it's so important to me ;///;<br>
+i wish i could see nature in all its splendor, in its completeness...<br>
+if you can have snow where you live, i know that you maybe is used it, but please enjoy this vision and live this experience having in mind that it is something really special !!<br>
+<br>
+changing the subject, i've been thinking a lot about how i take criticism into consideration, but i especially pay close attention to negative criticism..<br>
+i really do believe these are very useful for my personal improvement, but i think i've begun to take generalized negative criticism into consideration, which is a no no <img src="https://i.imgur.com/8eY00cR.gif"/><br>
+for example, when people generally talk negative things about humans, girls, anything that applies to me, i keep evaluating my behavior to see if i'm doing these bad things too<br>
+the problem is that even when i realize that i am not doing anything bad, at all, and that the comment was true but generalized, i still feel sad because the image of who i am is at first bad, right ?<br>
+i think it's important for my maturation to realize that people's opinions can really be very negative about me at first, but if they are not true, i should not be worrying about it. it only hurts me.<br>
+it's natural to people who generalize opinions and stereotype things and people, and if these are bad things, i naturally have to overcome them by myself, and not try to "clean the image" of all people, if after all, they are not doing their best too.<br>
+i think this is an important lesson !!<br>
+<br>
+do you also evaluate your behavior frequently ?<br>
+being the best that i can makes me very happy, but it's tiring when i'm being too strict with myself ///<br>
+i will focus on giving my best to give pride to those who know me <img src="https://i.imgur.com/ZOQNPSP.gif"/><br>
+it's hard to think a lot, but i feel very lucky to be a person and be able to have my heart connected with those i love & with nature ♡ ♡ ♡<br>
+i want my feelings to reach you, especially this xmas <img src="https://i.imgur.com/SG2ZwhZ.gif"/><br>
+<br>
+now i would like to show you a very special playlist that i made to enter the xmas mood :<br>
+<br><br>
+
+<center>
+<iframe width="350" height="196" src="https://www.youtube.com/embed/videoseries?list=PLsBmCEP2InOrIBoY7dgsGY2SUtA5pYtB2" frameborder="0" allowfullscreen></iframe>
+</center>
+
+</font></font></font>
+<br>
+<font size = 1><font color="#B1A69E">
+<br><br>
+i hope it can warm your hearts too ♡<br>
+there are only songs that are really special to me and that bring me sweet memories !<br>
+consider it as my present for you <img src="https://i.imgur.com/A7i3ZBP.gif"/><br>
+<br>
+i would like to comment that i have received some line stickers recently, from bubu, and i feel so identified with them ! it's literally me !!!<br>
+besides the appearance, i really always identified myself in some way with alice !<br>
+i especially identify with the feeling of dissociation, lack of reality and irritability that she shows in the course of the story.<br>
+i think my life was very marked by that, and it was a way for me to be able to understand who i really am and to deal with the world around me, while understanding what fantasies are and their power over reality !<br>
+okay, i may be going a little far ///<br>
+anyway, here she is :<br>
+<br>
+
+　　　　　　　　♡ <a id="linkbjinho" data-target="spoiler5id" class="btn-spoiler5id">pom's alice</a><br>
+
+<div id="spoiler5id" class="spoiler-area5id is-closed5id">
+<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<br>
+<center><img width="250" height="auto" src="https://i.imgur.com/zaOf0aP.png"/></center><br><br>
+<center><img width="250" height="auto" src="https://i.imgur.com/jOT7gxO.png"/></center><br><br>
+<center><img width="250" height="auto" src="https://i.imgur.com/KBA6iGp.png"/></center>
+<br><br>
+</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<style>
+p { margin: 0; }
+.spoiler-area5id {
+
+}
+.spoiler-area5id.is-closed5id { height: 0; overflow: hidden; padding: 10px 0 0; }
+</style>
+<script>
+(function(){
+    "use strict";
+    var $btns = document.querySelectorAll('.btn-spoiler5id');
+    function loop($els, cb) {
+        var i = $els.length;
+        while(i--) {
+            cb($els[i]);
+        }
+    }
+    loop($btns, function($btn){
+        $btn.addEventListener("click", function(){
+            var $spoiler = document.getElementById(this.getAttribute("data-target"));
+            if( this.innerHTML === "pom's alice" ){
+                this.innerHTML = "pom's alice ˣ";
+                $spoiler.classList.remove("is-closed5id");
+            } else {
+                this.innerHTML = "pom's alice";
+                $spoiler.classList.add("is-closed5id");
+            }
+        });
+
+    });
+
+}());
+</script>
+
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+today, the q&a will not be double, but i hope you like the subject i chose !<br>
+i think it can be very motivational and clarifying.<br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<br><br>
+i always see people talking about the girls' rivalry very aggressively, as if girls hated and competed with each other all the time.. i've been thinking a lot about it because i've always seen rivalry in a positive way in my life, but it was not always positive. i think i've come up with an explanation about it that makes a lot of sense :<br>
+to begin with, girls naturally rival each other, differently than boys do. boys also compete, but usually in more objective situations, as in a specific competition or at a specific point to achieve a goal. this type of competition is what we see in games, for example. it's frustrating if you lose, but however mature enough to deal with, that's okay ; it's nothing personal. this type of competition happens between boys and girls alike, but it is not the same as female rivalry.<br>
+female rivalry is something very subjective, and that's exactly why it's so interesting, and productive. when girls compare themselves with others in an objective way, they feel sad and can feel envy, which is bad and destructive to self-esteem and relationships ; but this is just a wrong and immature way of dealing with female rivalry ! it doesn't have to be this way ; ;<br>
+i've suffered comparing myself directly to other girls, but i've learned that healthy rivalry is when you compare yourself subjectively. all girls tend to have life goals that are naturally very subjective, which even they can't perceive. it's those kinds of goals that you couldn't write exactly in a list and just take some steps to get there - in fact, you might never get there - and that's extremely motivating ♡ !!!<br>
+comparing yourself to other girls looking at them as inspirations and looking at their achievements as motivation is something that always makes me feel very happy and inspired to be a better girl as well. to be a better person. i feel extremely motivated when i meet a girl who has life goals similar to mine ( things like being a purer, gentler, wiser person ) and on the same level that i feel that i don't want to lose to her, i don't want to be behind her, i want to reach her !! just as i want to be free to follow my own path, not hers ; i want to be just as a good girl as she is, not to be exactly like her. i want to be myself, the best i can be. seeing other girls being the best they can be fills my heart with joy and i definitely consider them rivals ! i want them to get better every day, just like me ♡ !!<br>
+the rivalry between girls is something wonderful and incredible, not for compare us objectively, but subjectively.<br>
+<br>
+do you fluffies agree on what i wrote ?<br>
+please, give me your opinions and additions ♡ !<br>
+i wish you all the most beautiful and peaceful xmas !!!<br>
+<br><br>
+<center><img src="https://i.imgur.com/CRKuEVk.gif"/></center>
+<br><br>
+<center><img src="https://i.imgur.com/LABdAxx.gif"/></center>
+<br>
+xoxo <img src="https://i.imgur.com/hqun0bM.gif"/><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/B3llkOg.gif"/></center>
+
+<br><br><br>
+
+<br>
 <center><img src="https://i.imgur.com/pdYOGop.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
