--- a/gaming.html
+++ b/gaming.html
@@ -616,6 +616,14 @@ p { margin: 0; }
 
 <br><br><br><br>
 
+<sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
+<font color="#a37a7a">　<b>love live</b>　<font style="font-size:9px">♡</font></font><br><br>
+　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/7Dd6mMW7EMTsihFk7" target="_blank">
+<font color="#af8c8c">my fav ur</font></a>
+
+<br><br><br><br>
+
 
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
 <font color="#a37a7a">　<b>tomotoru</b>　<font style="font-size:9px">♡</font></font><br><br>
@@ -671,6 +679,66 @@ p { margin: 0; }
 <br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
 <a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/NfgqqgVzFLFsQdQe8" target="_blank">
+<font color="#af8c8c">more images</font></a>
+
+<br><br><br><br>
+
+<sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
+<font color="#a37a7a">　<b>love nikki</b>　<font style="font-size:9px">♡</font></font><br><br>
+　　　<sub><sub><img src="https://i.imgur.com/v3VaYjZ.gif"></sub></sub>　
+<a id="linkbjinho" style="text-decoration:none; color:#af8c8c;" data-target="spoiler9" class="btn-spoiler9">me and my home</a>
+
+
+<center>
+
+<div id="spoiler9" class="spoiler-area is-closed9">
+<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<br>
+<img width="250px" height="auto" src="https://i.imgur.com/2Nnk3a9.png"/>
+<br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/POjQiSO.png"/>
+<br><br>
+</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<style>
+p { margin: 0; }
+.spoiler-area9 {
+
+}
+.spoiler-area.is-closed9 { height: 0; overflow: hidden; padding: 10px 0 0; }
+</style>
+<script>
+(function(){
+    "use strict";
+    var $btns = document.querySelectorAll('.btn-spoiler9');
+    function loop($els, cb) {
+        var i = $els.length;
+        while(i--) {
+            cb($els[i]);
+        }
+    }
+    loop($btns, function($btn){
+        $btn.addEventListener("click", function(){
+            var $spoiler = document.getElementById(this.getAttribute("data-target"));
+            if( this.innerHTML === "me and my home" ){
+                this.innerHTML = "me and my home ˣ";
+                $spoiler.classList.remove("is-closed9");
+            } else {
+                this.innerHTML = "me and my home";
+                $spoiler.classList.add("is-closed9");
+            }
+        });
+
+    });
+
+}());
+</script>
+
+
+</center>
+
+<br>
+　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/nKoAmelMxYC7HxbA3" target="_blank">
 <font color="#af8c8c">more images</font></a>
 
 <br><br><br><br>
@@ -734,6 +802,62 @@ p { margin: 0; }
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
 <a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/GvayxZzaxvKMqJV18" target="_blank">
 <font color="#af8c8c">more images</font></a>
+
+<br><br><br><br>
+
+<sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
+<font color="#a37a7a">　<b>pokemon</b>　<font style="font-size:9px">♡</font></font><br><br>
+　　　<sub><sub><img src="https://i.imgur.com/v3VaYjZ.gif"></sub></sub>　
+<a id="linkbjinho" style="text-decoration:none; color:#af8c8c;" data-target="spoiler10" class="btn-spoiler10">my fav pkmn</a>
+
+
+<center>
+
+<div id="spoiler10" class="spoiler-area is-closed10">
+<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<br>
+<img src="https://i.imgur.com/YJMBRnY.gif"/>　<img src="https://i.imgur.com/f38jgcv.gif"/>　<img src="https://i.imgur.com/osKIKE8.gif"/><br><br>
+<img src="https://i.imgur.com/RFcyci1.gif"/>　<img src="https://i.imgur.com/6vSkecb.gif"/>　<img src="https://i.imgur.com/McI88Bm.gif"/><br><br>
+<img src="https://i.imgur.com/x21peRl.gif"/>　<img src="https://i.imgur.com/oRjKJfb.gif"/>　<img src="https://i.imgur.com/WSU8xPc.gif"/>
+
+<br><br>
+</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<style>
+p { margin: 0; }
+.spoiler-area10 {
+
+}
+.spoiler-area.is-closed10 { height: 0; overflow: hidden; padding: 10px 0 0; }
+</style>
+<script>
+(function(){
+    "use strict";
+    var $btns = document.querySelectorAll('.btn-spoiler10');
+    function loop($els, cb) {
+        var i = $els.length;
+        while(i--) {
+            cb($els[i]);
+        }
+    }
+    loop($btns, function($btn){
+        $btn.addEventListener("click", function(){
+            var $spoiler = document.getElementById(this.getAttribute("data-target"));
+            if( this.innerHTML === "my fav pkmn" ){
+                this.innerHTML = "my fav pkmn ˣ";
+                $spoiler.classList.remove("is-closed10");
+            } else {
+                this.innerHTML = "my fav pkmn";
+                $spoiler.classList.add("is-closed10");
+            }
+        });
+
+    });
+
+}());
+</script>
+
+
+</center>
 
 <br><br><br><br>
 
@@ -919,67 +1043,6 @@ p { margin: 0; }
 
 
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
-<font color="#a37a7a">　<b>love nikki</b>　<font style="font-size:9px">♡</font></font><br><br>
-　　　<sub><sub><img src="https://i.imgur.com/v3VaYjZ.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none; color:#af8c8c;" data-target="spoiler9" class="btn-spoiler9">me and my home</a>
-
-
-<center>
-
-<div id="spoiler9" class="spoiler-area is-closed9">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<img width="250px" height="auto" src="https://i.imgur.com/2Nnk3a9.png"/>
-<br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/POjQiSO.png"/>
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area9 {
-
-}
-.spoiler-area.is-closed9 { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler9');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "me and my home" ){
-                this.innerHTML = "me and my home ˣ";
-                $spoiler.classList.remove("is-closed9");
-            } else {
-                this.innerHTML = "me and my home";
-                $spoiler.classList.add("is-closed9");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-
-</center>
-
-<br>
-　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/nKoAmelMxYC7HxbA3" target="_blank">
-<font color="#af8c8c">more images</font></a>
-
-<br><br><br><br>
-
-
-<sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
 <font color="#a37a7a">　<b>hidden world</b>　<font style="font-size:9px">♡</font></font><br><br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
 <a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/yPabDPg8fmKsNxSM9" target="_blank">
@@ -987,62 +1050,6 @@ p { margin: 0; }
 
 <br><br><br><br>
 
-
-<sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
-<font color="#a37a7a">　<b>pokemon</b>　<font style="font-size:9px">♡</font></font><br><br>
-　　　<sub><sub><img src="https://i.imgur.com/v3VaYjZ.gif"></sub></sub>　
-<a id="linkbjinho" style="text-decoration:none; color:#af8c8c;" data-target="spoiler10" class="btn-spoiler10">my fav pkmn</a>
-
-
-<center>
-
-<div id="spoiler10" class="spoiler-area is-closed10">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<br>
-<img src="https://i.imgur.com/YJMBRnY.gif"/>　<img src="https://i.imgur.com/f38jgcv.gif"/>　<img src="https://i.imgur.com/osKIKE8.gif"/><br><br>
-<img src="https://i.imgur.com/RFcyci1.gif"/>　<img src="https://i.imgur.com/6vSkecb.gif"/>　<img src="https://i.imgur.com/McI88Bm.gif"/><br><br>
-<img src="https://i.imgur.com/x21peRl.gif"/>　<img src="https://i.imgur.com/oRjKJfb.gif"/>　<img src="https://i.imgur.com/WSU8xPc.gif"/>
-
-<br><br>
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-<style>
-p { margin: 0; }
-.spoiler-area10 {
-
-}
-.spoiler-area.is-closed10 { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler10');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "my fav pkmn" ){
-                this.innerHTML = "my fav pkmn ˣ";
-                $spoiler.classList.remove("is-closed10");
-            } else {
-                this.innerHTML = "my fav pkmn";
-                $spoiler.classList.add("is-closed10");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-
-</center>
-
-<br><br><br><br>
 
 
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
