--- a/faq.html
+++ b/faq.html
@@ -54,11 +54,7 @@ background-color: #f9f0ed;
 -webkit-border-radius: 0ex;
 border: 1px dotted #e2d5d0;
 }
-#linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-
-#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-
-</style>
+#linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }</style>
 
 <!--
 tooooooooltip
@@ -271,9 +267,7 @@ z-index: 3;
 
 
 <div onselectstart="return false" id="menu1">
-<p style="font-size:10px;line-height:50%;"><br><br>
-
-　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
+<p style="font-size:10px;line-height:50%;"><br><br>　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/links" style="text-decoration: none; color:#a3948d;">links</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/contact" style="text-decoration: none; color:#a3948d;">contact</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
@@ -369,12 +363,19 @@ i think this is enough to clarify your doubts !
 <font color="#B1A69E">
 　｡ ･ * . ♡ 𝑚𝑒𝑙𝑖𝑠𝑠𝑎
 <br>
-melissa is my name. i really like my name, but i don't use it on the internet because it would be difficult to find me, you know. melissa is the name of a plant, the lemon balm. it is common for people to use this plant to make tea and for medicinal purposes. it has very small, white and delicate flowers. the meaning of this name is literally "honeybee", which makes people give some interesting interpretations to it. some people gave me the nickname "mel" ( which means literally honey ), but they usually call me melissa.
+melissa is my irl name. i really like my name, but i don't use it on the internet because it would be difficult to find me, you know. melissa is the name of a plant, the lemon balm. it is common for people to use this plant to make tea and for medicinal purposes. it has very small, white and delicate flowers. the meaning of this name is literally "honeybee", which makes people give some interesting interpretations to it. some people gave me the nickname "mel" ( which means literally honey ).
 <br>
 <br>
 　｡ ･ * . ♡ 𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡
 <br>
-this is actually more a surname than a name, but i use it as a nickname on the internet, as well as some variations of it ( mimi, midpot, mimipot ). it's not a real surname, i discovered it in a dream. at the time i was thinking of a nickname to use on the internet and i had just created the "crwel friends" project, so i was thinking about many things and characters, especially potatoes. i used the nickname "poteto" from time to time, because of that. one day i dreamed about potatoes and many other confusing things, including a very fat and giant cat that called me "melissa middlepot". he told me "you're bigger than your potato friends, but there are still bigger potatoes, believe me", even though i was not really a potato. i know it's weird, but the dream was in portuguese, except for the surname "middlepot", so it's a bit hard to explain LOL. well, i woke up really thinking that middlepot was good, it sounds like some english surnames. so, yes, i believe that "pot" is from "potato". be honest, "middlepot" is pretty cute, isn't it ?<br>
+this is actually a surname, and i use it as "artistic signature". it's very formal, so i don't use it as user on the internet. i've used some variations of it ( mimi, midpot, mimipot ) in the past, though. it's not a real surname, i discovered it in a dream. at the time i was thinking of a nickname to use on the internet and i had just created the "poofties" project, so i was thinking about many things and characters, especially potatoes. i used the nickname "poteto" from time to time, because of that. one day i dreamed about potatoes and many other confusing things, including a very fat and giant cat that called me "melissa middlepot". he told me "you're bigger than your potato friends, but there are still bigger potatoes, believe me", even though i was not really a potato. i know it's weird, but the dream was in portuguese, except for the surname "middlepot", so it's a bit hard to explain LOL. well, i woke up really thinking that middlepot was good, it sounds like some english surnames. so, yes, i believe that "pot" is from "potato". be honest, "middlepot" is pretty cute, isn't it ?
+<br>
+<br>
+　｡ ･ * . ♡ 𝑝𝑢𝑓 / 𝑠𝑜𝑓𝑡𝑖𝑒
+<br>
+puf is not just a nickname but actually a character from the poofti world. it's who i am, there ! middlepot is the surname that was given for me, but they don't call me like this, because it's too formal.. they neither call me melissa / mel ; they call me puf !<br>
+puf is a "softie", a metamorphic critter that can take the form of anything that is "soft" enough. it is often seen in the form of a teddy bear, bunny, lamb, or human girl ! sometimes a mix between these .. sometimes with wings, but it cannot fly. puf can't control its metamorphosis abilities, it happens suddenly and without explanation.<br>
+i like to use its name and variations as user in my "casual" accounts ! small and cute.<br>
 <br><br><br><br><br><br>
 </font>
 
