--- a/fashion.html
+++ b/fashion.html
@@ -332,6 +332,11 @@ p { margin: 0; }
 <br>
 <center>
 
+<br><br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 04.13.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/d1SFjPO.png"/><br>
+<br>
+
 <br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 11.29.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/uLtfvWN.png"/><br>
@@ -382,11 +387,6 @@ p { margin: 0; }
 <img width="220px" height="auto" src="https://i.imgur.com/IWRM6XL.png"/><br>
 <br>
 
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 05.16.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/zgCG3hj.png"/><br>
-<br>
 
 
 <br><br>
