--- a/gaming.html
+++ b/gaming.html
@@ -1285,6 +1285,14 @@ p { margin: 0; }
 
 <br><br><br><br>
 
+<sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
+<font color="#a37a7a">　<b>my little star</b>　<font style="font-size:9px">♡</font></font><br><br>
+　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
+<a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/tRHizx6oNgZEFwSr9" target="_blank">
+<font color="#af8c8c">me</font></a>
+
+<br><br><br><br>
+
 
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
 <font color="#a37a7a">　<b>second life</b>　<font style="font-size:9px">♡</font></font><br><br>
