--- a/index.html
+++ b/index.html
@@ -299,26 +299,25 @@ z-index: 3;
 <div id="update" style="background:linear-gradient(to top, #fcf6f2 ,transparent 90%); border: 1px; padding: 10px; overflow: auto; color: #BC9F9F; width: 172px;height: 110px; text-align: justify; font-family: Verdana; font-size:8px; line-height: 100%">
 <center><sub><sub><img src="https://i.imgur.com/96xhX4a.gif"></sub></sub>　<font color="#d3a5a5" size=1>updates</font>　<sub><sub><img src="https://i.imgur.com/8rwotzX.gif"></sub></sub></center>
 <br>
+　　04.23 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> links on: <font color="#DFB7B7">index page</font><br>
 　　04.13 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> look on: <font color="#DFB7B7">fashion page</font><br>
 　　04.13 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> game on: <font color="#DFB7B7">gaming page</font><br>
 　　04.11 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> edit on: <font color="#DFB7B7">faq page</font><br>
 　　04.10 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> tips on: <font color="#DFB7B7">help page</font><br>
-　　04.09 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> edit on: <font color="#DFB7B7">links page</font><br>
 </div>
 </center>
 
 <br>
-<img src="https://i.imgur.com/9t37pSy.png"/>
-<br>
-<textarea style="height:9px; width:50px;  border:1px dotted #e2d5d0; -moz-border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -khtml-border-radius: 20px;
-    border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/AgXOBtX.png); font-size:8px; font-family:Verdana; COLOR: #b29487"><a href="https://middlepot.com/"><img src="https://i.imgur.com/9t37pSy.png"></a></textarea>
-<br><br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2019 . april . 13</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2019 . april . 23</font></font></font>
+<br><br><br>
+
+<font family = "Verdana"><font style="font-size:8px;"><font color="#d8c0ad">( </font><font color="#efb8b8">♡</font><a id="linkzinho" href="https://ko-fi.com/middlepot" target="_blank"><font color="#b7a596"> buy me a coffee </font></a><font color="#efb8b8">♡</font><font color="#d8c0ad"> )</font></font></font>
+<br><br>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#d8c0ad">( </font><font color="#efb8b8">♡</font><a id="linkzinho" href="/commissions" target="_blank"><font color="#c48f8f"> want a similar website ? click here </font></a><font color="#efb8b8">♡</font><font color="#d8c0ad"> )</font></font></font>
 <br><br>
 <font family = "Verdana"><font style="font-size:8px;"><font color="#d8c0ad">( </font><font color="#efb8b8">♡</font><a id="linkzinho" href="https://shybunny.middlepot.com" target="_blank"><font color="#c9a5a5"> visite minha lojinha </font></a><font color="#efb8b8">♡</font><font color="#d8c0ad"> )</font></font></font>
+
 <br><br><br>
 <font style="font-size:5px" color="#d8c0ad">.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.</font><br><br>
 <font color="#c4ae9d">welcome to my safe corner on the internet !<br>
