--- a/portfolio.html
+++ b/portfolio.html
@@ -375,8 +375,8 @@ z-index: 3;
 <center>
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> fonts<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<a href="https://mega.nz/#!h4g3CK5Y!TEKXFSj7VQRduspCnP5D5eeD125QiTHpOYnbvMbX7GU" target="_blank"><img src="https://i.imgur.com/KjGQcfl.png"></a><br><br>
-<a href="https://mega.nz/#!goonkBiA!GfrdP7ywSNGSFTuNajH8r1fXBd2ObPJi4Q5WLsNZy2g" target="_blank"><img src="https://i.imgur.com/RgTmqQx.png"></a>
+<a href="https://files.catbox.moe/6npeac.rar" target="_blank"><img src="https://i.imgur.com/KjGQcfl.png"></a><br><br>
+<a href="https://files.catbox.moe/1xv5de.rar" target="_blank"><img src="https://i.imgur.com/RgTmqQx.png"></a>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -425,14 +425,7 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> story games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
 <img width="200px" height="auto" src="https://i.imgur.com/QWm8Eg7.gif"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/77Z0WH4.png">
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> coding<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<br>
-<a href="https://mega.nz/#!155gCTqa!i60sE35zeHFTOcm7KHpW5Hgsxq0H3mjzc9JQZ5nhS-I" target="_blank" id="linkzinhoinhoi">test .html</a>
+<img width="200px" height="auto" src="https://i.imgur.com/wZeIURm.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
