--- a/credits.html
+++ b/credits.html
@@ -401,9 +401,9 @@ moveupvar=setTimeout("moveup()",20)
 　　　font : catbox.moe<br>
 　　　txt : catbox.moe<br>
 　　　swf : catbox.moe<br>
+　　　rar : catbox.moe<br>
 　　　folder : google drive<br>
-　　　script : google drive<br>
-　　　rar : mega<br><br>
+　　　script : google drive<br><br>
 </font></font></font>
 <font family = "Verdana"><font color="#B3A49A"><font size="1">
 <font size="2">※</font> i'll update this list whenever i change a hosting.<br>
