--- a/archive.html
+++ b/archive.html
@@ -55,9 +55,7 @@ background-color: #f9f0ed;
 border: 1px dotted #e2d5d0;
 }
 #linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-
-</style>
+#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }</style>
 
 <!--
 tooooooooltip
@@ -273,9 +271,7 @@ z-index: 3;
 
 
 <div onselectstart="return false" id="menu1">
-<p style="font-size:10px;line-height:50%;"><br><br>
-
-　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
+<p style="font-size:10px;line-height:50%;"><br><br>　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/links" style="text-decoration: none; color:#a3948d;">links</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/contact" style="text-decoration: none; color:#a3948d;">contact</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
@@ -581,7 +577,7 @@ so, after that random break.. i have here a colorful, nostalgic and super cute c
 
 <center><img width="350px" height="auto" src="https://i.imgur.com/VmuqaVF.png"/></center>
 <br><br>
-<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://mega.nz/#!YtYQBCSa!2Gr7cchulg-k7ftZ6tQmVWV76GswvJKJ6vQYYWVIawQ" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">happy dreams html .rar</font></a>　</center>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/c5r13y.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">happy dreams html .rar</font></a>　</center>
 </font></font></font>
 <br>
 
@@ -715,7 +711,7 @@ i have many good memories of my old blog, i'm very happy that now it really is p
 i'll leave a backup here as well :<br>
 <br>
 
-<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://mega.nz/#!Fw52lCDb!nD8gO24j2re1-4JRLiZOOc-bAiSGWGMIkma7Z1Wn2iE" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">charmmy kitty .rar</font></a>　</center>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/jmhslr.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">charmmy kitty .rar</font></a>　</center>
 </font></font></font>
 
 <font size = 1><font color="#B1A69E">
@@ -858,7 +854,7 @@ i'll start with this beautiful collage, which i was planning to do for some time
 
 <center><img width="350px" height="auto" src="https://i.imgur.com/607F4BU.png"/></center>
 <br><br>
-<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://mega.nz/#!FxZTBKoK!m7ND43Kn03kBc2Mx8cykq0n1X45I6O5EqzsX0xQKAVM" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">midnight angel html .rar</font></a>　</center>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/l8qrv5.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">midnight angel html .rar</font></a>　</center>
 </font></font></font>
 <br>
 
@@ -886,7 +882,7 @@ it's pretty nonsense, but i really put some feelings into it, so i hope you like
 
 <center><img width="350px" height="auto" src="https://i.imgur.com/17h6Kes.png"/></center>
 <br><br>
-<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://mega.nz/#!ZlA3WACZ!M4WhJK6Quc2y_7ry5IrfGfPZzxYq2VMGCWXGDu-GU-M" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">sofffffft .rar</font></a>　</center>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/2ew9or.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">sofffffft .rar</font></a>　</center>
 </font></font></font>
 <br>
 
@@ -1298,7 +1294,7 @@ it's so fun to make these collages, i really want to do it often, if you support
 
 <center><img width="350px" height="auto" src="https://i.imgur.com/Wtz6hr6.png"/></center>
 <br><br>
-<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://mega.nz/#!A5phyTBB!ZKAFVU7KRvondJO-1pIupULt8-9dmoVDU0_BySUarsM" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">honey morning html .rar</font></a>　</center>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/ta12za.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">honey morning html .rar</font></a>　</center>
 </font></font></font>
 <br>
 
@@ -1324,7 +1320,7 @@ so i started to make a html page that was comfortable to store them, organizing 
 
 <center><img width="350px" height="auto" src="https://i.imgur.com/HlNhsmu.png"/></center>
 <br><br>
-<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://mega.nz/#!thQlUCaJ!fwCyd7-WSQef4_EtxfKdrVVNRlFT44mV6m6-5vaMzEI" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">virtualstuffie .rar</font></a>　</center>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/2u6no9.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">virtualstuffie .rar</font></a>　</center>
 </font></font></font>
 <br>
 
@@ -1781,7 +1777,7 @@ the domain is literally cute ( cute.home.kg ) and i'll leave a backup file for e
 
 <center><img width="350px" height="auto" src="https://i.imgur.com/VZmuGK3.png"/></center>
 <br><br>
-<center><a href="https://mega.nz/#!wphTHY7L!4g7cHJvwh3oFfYRGmyM6R_z7q355ABdZ0x3hbj5sy00" id="linkbjinho" target="_blank">soft milk html .rar</a></center>
+<center><a href="https://files.catbox.moe/4b7pto.rar" id="linkbjinho" target="_blank">soft milk html .rar</a></center>
 </font></font></font>
 <br>
 <center>
@@ -2324,7 +2320,7 @@ i will leave here a backup file, as always :<br>
 
 <center><img width="350px" height="auto" src="https://i.imgur.com/Re0yY7n.png"/></center>
 <br><br>
-<center><a href="https://mega.nz/#!d4xglbjI!bbil11FF0OUU2-eEnpd93s-HvOWlWc5svWAbJrZ7cGg" id="linkbjinho" target="_blank">rotininha .rar</a></center>
+<center><a href="https://files.catbox.moe/9vscgh.rar" id="linkbjinho" target="_blank">rotininha .rar</a></center>
 </font></font></font>
 <br>
 <center>
@@ -2606,11 +2602,11 @@ the "bby" font is only hiragana & katakana. i made it based on the fact that i u
 well, i hope you like it !<br>
 <br><br>
 
-<center><a href="https://mega.nz/#!h4g3CK5Y!TEKXFSj7VQRduspCnP5D5eeD125QiTHpOYnbvMbX7GU" target="_blank"><img src="https://i.imgur.com/NCMnAEl.png"/></a></center>
+<center><a href="https://files.catbox.moe/6npeac.rar" target="_blank"><img src="https://i.imgur.com/NCMnAEl.png"/></a></center>
 <br><br>
-<center><a href="https://mega.nz/#!cpQmHLJS!iMS2lWCLepuHFpjG-TPHTzUaFV5aw1G-jmep3gocPng" target="_blank"><img src="https://i.imgur.com/B2VF9hr.png"/></a></center>
+<center><a href="https://files.catbox.moe/xg80u9.rar" target="_blank"><img src="https://i.imgur.com/B2VF9hr.png"/></a></center>
 <br><br>
-<center><a href="https://mega.nz/#!goonkBiA!GfrdP7ywSNGSFTuNajH8r1fXBd2ObPJi4Q5WLsNZy2g" target="_blank"><img src="https://i.imgur.com/kfEIRhD.png"/></a></center>
+<center><a href="https://files.catbox.moe/1xv5de.rar" target="_blank"><img src="https://i.imgur.com/kfEIRhD.png"/></a></center>
 
 <br><br>
 <br>
@@ -3294,7 +3290,7 @@ i thought these pages could be a good christmas gift for you, so here they are :
 
 <center><img width="350px" height="auto" src="https://i.imgur.com/l30qDQl.png"/></center>
 <br><br>
-<center><a href="https://mega.nz/#!YxB0wJyD!DZpGgXuz3CytphTXJ4KJQIlAp01HgYE2HV_lH_I55xw" id="linkbjinho" target="_blank">ppdoll .rar</a></center>
+<center><a href="https://files.catbox.moe/qjxdzg.rar" id="linkbjinho" target="_blank">ppdoll .rar</a></center>
 </font></font></font>
 <br>
 <center>
@@ -3397,7 +3393,7 @@ anyway i will keep the links page updated, and for security, the html files are 
 
 <center><img width="350px" height="auto" src="https://i.imgur.com/7h0fpbK.png"/></center>
 <br><br>
-<center><a href="https://mega.nz/#!EhxgDI7Q!N3fDjgpmwfI4wr3HB3uqFH05r16nCl3u_mrbyYingKk" id="linkbjinho" target="_blank">utf8conv .rar</a></center>
+<center><a href="https://files.catbox.moe/c7w2bx.rar" id="linkbjinho" target="_blank">utf8conv .rar</a></center>
 </font></font></font>
 <br>
 <center>
@@ -4428,7 +4424,7 @@ i realized that nowadays this is not very common, so, since it's very cute and f
 <br>
 <br><br>
 
-<center><a href="https://mega.nz/#!155gCTqa!i60sE35zeHFTOcm7KHpW5Hgsxq0H3mjzc9JQZ5nhS-I" id="linkbjinho" target="_blank">test .rar</a></center>
+<center><a href="https://files.catbox.moe/msm13n.rar" id="linkbjinho" target="_blank">test .rar</a></center>
 </font></font></font>
 <br>
 <center>
@@ -4551,7 +4547,7 @@ based on other versions, i created my own version of this site, but offline. you
 <br>
 <br><br>
 
-<center><a href="https://mega.nz/#!8xQV3YKY!az8Pm0JCqpdn-Aa5Dvr99_dx2KM8M56KPOVAIIc8R3s" id="linkbjinho" target="_blank">offline ywot .rar</a></center>
+<center><a href="https://files.catbox.moe/hu9r85.rar" id="linkbjinho" target="_blank">offline ywot .rar</a></center>
 </font></font></font>
 <br>
 <center>
