--- a/blog.html
+++ b/blog.html
@@ -55,9 +55,7 @@ background-color: #f9f0ed;
 border: 1px dotted #e2d5d0;
 }
 #linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-
-</style>
+#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }</style>
 
 <!--
 tooooooooltip
@@ -273,9 +271,7 @@ z-index: 3;
 
 
 <div onselectstart="return false" id="menu1">
-<p style="font-size:10px;line-height:50%;"><br><br>
-
-　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
+<p style="font-size:10px;line-height:50%;"><br><br>　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/links" style="text-decoration: none; color:#a3948d;">links</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/contact" style="text-decoration: none; color:#a3948d;">contact</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
@@ -371,7 +367,7 @@ i made sprites of myself in all themes.. this is my fav one :<br>
 
 <center><img src="https://i.imgur.com/NuIecGD.png"/></center>
 <br><br>
-<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://mega.nz/#!FsIEQKZJ!Y7lCH-qafZ99F34yC5Q4F57clbBz6n7olP7w7bnA4pk" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">ragnarok .rar</font></a>　</center>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/dmveii.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">ragnarok .rar</font></a>　</center>
 </font></font></font>
 <br>
 
@@ -559,7 +555,7 @@ i've been saving images with this aesthetic for a loooong time, i love this them
 
 <center><img width="350px" height="auto" src="https://i.imgur.com/jxvycdQ.png"/></center>
 <br><br>
-<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://mega.nz/#!Y1QjkSaa!8tgg8FhjEGmySNBQw3nspqCvhyLAfNDsk0SPGq8N7pE" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">strawberry valentine html .rar</font></a>　</center>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/x3u0nk.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">strawberry valentine html .rar</font></a>　</center>
 </font></font></font>
 <br>
 
