--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ z-index: 3;
 
 <center>
 
-<br><center>
+<center>
 <div id="update" style="background:linear-gradient(to top, #fcf6f2 ,transparent 90%); border: 1px; padding: 10px; overflow: auto; color: #BC9F9F; width: 172px;height: 110px; text-align: justify; font-family: Verdana; font-size:8px; line-height: 100%">
 <center><sub><sub><img src="https://i.imgur.com/96xhX4a.gif"></sub></sub>　<font color="#d3a5a5" size=1>updates</font>　<sub><sub><img src="https://i.imgur.com/8rwotzX.gif"></sub></sub></center>
 <br>
